--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -137,10 +137,9 @@ outputs:
 
 
   - name: {{ name }}-with-async
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - eventlet >=0.9.7
         - gevent >=0.13
@@ -153,10 +152,9 @@ outputs:
         - greenlet
 
   - name: {{ name }}-with-atlas
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - atlasclient >=0.1.2
     test:
@@ -164,10 +162,9 @@ outputs:
         - airflow.lineage.backend.atlas
 
   - name: {{ name }}-with-aws
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         # leaving this as is because it was just added, but noting that upstream
         # constraint is boto3~=1.10 and no watchtower
@@ -181,10 +178,9 @@ outputs:
         - airflow.contrib.hooks.aws_hook
 
   - name: {{ name }}-with-azure_blob_storage
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - azure-storage >=0.34.0,<0.37.0
         - azure-storage-blob <12.0
@@ -197,10 +193,9 @@ outputs:
         - airflow.contrib.hooks.wasb_hook
 
   - name: {{ name }}-with-azure_data_lake
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - azure-datalake-store >=0.0.45
         - azure-mgmt-datalake-store >=0.5.0
@@ -212,10 +207,9 @@ outputs:
         - airflow.contrib.hooks.azure_data_lake_hook
 
   - name: {{ name }}-with-azure_cosmos
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - azure-cosmos >=3.0.1,<4
     test:
@@ -226,10 +220,9 @@ outputs:
 
   # Note: no azure-mgmt-containerinstance feedstock
   #- name: {{ name }}-with-azure-mgmt-containerinstance
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - azure-mgmt-containerinstance >=1.5.0,<2
   #  test:
@@ -238,10 +231,9 @@ outputs:
   #      - azure.mgmt.containerinstance
 
   - name: {{ name }}-with-cassandra
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - cassandra-driver >=3.13.0,<3.21.0
     test:
@@ -251,10 +243,9 @@ outputs:
         - airflow.contrib.hooks.cassandra_hook
 
   - name: {{ name }}-with-celery
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - celery >=4.3.0,<4.4.0
         - vine >=1.3.0,<5.0.0
@@ -268,10 +259,9 @@ outputs:
         - airflow.executors.celery_executor
 
   - name: {{ name }}-with-cgroups
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - cgroupspy >=0.1.4
     test:
@@ -281,10 +271,9 @@ outputs:
         - airflow.contrib.task_runner.cgroup_task_runner
 
   - name: {{ name }}-with-cloudant
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         # leaving as is because older versions are not build with py>27 but
         # upstream constraint is cloudant>=0.5.9,<2.0
@@ -296,10 +285,9 @@ outputs:
         - airflow.contrib.hooks.cloudant_hook
 
   - name: {{ name }}-with-crypto
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - cryptography >=0.9.3
     test:
@@ -311,10 +299,9 @@ outputs:
   # note: the older version of distributed pinned here is not available for
   # py38
   #- name: {{ name }}-with-dask
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - distributed >=1.17.1,<2
   #  test:
@@ -324,10 +311,9 @@ outputs:
   #      - airflow.executors.dask_executor
 
   - name: {{ name }}-with-databricks
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - requests >=2.20.0,<3
     test:
@@ -337,10 +323,9 @@ outputs:
         - airflow.contrib.hooks.databricks_hook
 
   - name: {{ name }}-with-datadog
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - datadog >=0.14.0
     test:
@@ -352,10 +337,9 @@ outputs:
   # note: the older version of docker-py pinned here is not available for
   # py38
   #- name: {{ name }}-with-docker
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - docker-py >=3.0.0,<3.1.0
   #  test:
@@ -366,10 +350,9 @@ outputs:
   #      - airflow.operators.docker_operator
 
   - name: {{ name }}-with-druid
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pydruid >=0.4.1,<=0.5.8
     test:
@@ -381,10 +364,9 @@ outputs:
   # note: the older version of elasticsearch-dsl pinned here is not available
   # for py38
   #- name: {{ name }}-with-elasticsearch
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - elasticsearch >=5.0.0,<6.0.0
   #      - elasticsearch-dsl >=5.0.0,<6.0.0
@@ -396,10 +378,9 @@ outputs:
   # same as aws, but I'm taking upstream literally this time and leaving out
   # watchtower
   - name: {{ name }}-with-emr
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - boto3 >=1.10.0,<1.11.0
     test:
@@ -409,10 +390,9 @@ outputs:
         - airflow.contrib.hooks.aws_hook
 
   - name: {{ name }}-with-flask_oauth
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - flask-oauthlib >=0.9.1
         - oauthlib !=2.0.3,!=2.0.4,!=2.0.5,<3.0.0,>=1.1.2
@@ -451,10 +431,9 @@ outputs:
  #       - pandas-gbq
 
   - name: {{ name }}-with-grpc
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - google-auth >=1.0.0,<2.0.0dev
         - grpcio >=1.15.0
@@ -465,10 +444,9 @@ outputs:
         - airflow.contrib.hooks.grpc_hook
 
   - name: {{ name }}-with-hashicorp
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - hvac >=0.10.0,<0.11.0
     test:
@@ -480,10 +458,9 @@ outputs:
   # this is unlikely to remain useful since snakebite only supports py<=27
   # and hasn't been updated in 4 years
   #- name: {{ name }}-with-hdfs
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - snakebite >=2.7.8
   #  test:
@@ -492,10 +469,9 @@ outputs:
   #      - airflow.hooks.hdfs_hook
 
   - name: {{ name }}-with-hive
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - hmsclient >=0.1.0
         - pyhive >=0.6.0
@@ -507,10 +483,9 @@ outputs:
 
   # note: upstream pin jpype1==0.7.1 was not built on conda-forge
   #- name: {{ name }}-with-jdbc
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - jpype1 0.7.1
   #      - jaydebeapi >=1.1.1
@@ -520,10 +495,9 @@ outputs:
   #      - airflow.hooks.jdbc_hook
 
   - name: {{ name }}-with-jenkins
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python-jenkins >=1.0.0
     test:
@@ -533,10 +507,9 @@ outputs:
         - airflow.contrib.hooks.jenkins_hook
 
   - name: {{ name }}-with-jira
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - jira >=1.0.7
     test:
@@ -548,10 +521,9 @@ outputs:
   # this is unlikely to be useful since snakebite only supports py<=27
   # and hasn't been updated in 4 years
   #- name: {{ name }}-with-kerberos
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - pykerberos >=1.1.13
   #      - requests-kerberos >=0.10.0
@@ -564,10 +536,9 @@ outputs:
   #      - airflow.api.auth.backend.kerberos_auth
 
   - name: {{ name }}-with-kubernetes
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python-kubernetes >=3.0.0
         - cryptography >=2.0.0
@@ -578,10 +549,9 @@ outputs:
         - airflow.executors.kubernetes_executor
 
   - name: {{ name }}-with-ldap
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - ldap3 >=2.5.1
     test:
@@ -591,10 +561,9 @@ outputs:
         - airflow.contrib.auth.backends.ldap_auth
 
   - name: {{ name }}-with-mongo
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pymongo >=3.6.0,<3.11.0
         - dnspython >=1.13.0,<2.0.0
@@ -607,10 +576,9 @@ outputs:
   # note: the version of pymssql pinned here is not available for py38 and
   # newer builds are not getting merged
   #- name: {{ name }}-with-mssql
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - pymssql >=2.1.1,<2.2.0
   #  test:
@@ -621,10 +589,9 @@ outputs:
 
   # note: the older version of mysqlclient pinned here is not available for py38
   #- name: {{ name }}-with-mysql
-  #  build:
-  #    skip: true  # [py!=38]
   #  requirements:
   #    run:
+  #      - python
   #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
   #      - mysqlclient >=1.3.6,<1.4
   #  test:
@@ -634,10 +601,9 @@ outputs:
   #      - airflow.hooks.mysql_hook
 
   - name: {{ name }}-with-oracle
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - cx_oracle >=5.1.2,<8.0.0  # [py<30]
         - cx_oracle >=5.1.2  # [py>=30]
@@ -648,10 +614,9 @@ outputs:
         - airflow.hooks.oracle_hook
 
   - name: {{ name }}-with-pagerduty
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pypd >=1.1.0
     test:
@@ -660,10 +625,9 @@ outputs:
         - pypd
 
   - name: {{ name }}-with-papermill
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - papermill[all] >=1.0.0
         - nteract-scrapbook[all] >=0.2.1
@@ -676,10 +640,9 @@ outputs:
         - airflow.operators.papermill_operator
 
   - name: {{ name }}-with-password
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - bcrypt >=2.0.0
         - flask-bcrypt >=0.7.1
@@ -704,10 +667,9 @@ outputs:
   #      - airflow.contrib.hooks.pinot_hook
 
   - name: {{ name }}-with-postgres
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - psycopg2 >=2.7.4
     test:
@@ -731,10 +693,9 @@ outputs:
   #      - airflow.hooks.presto_hook
 
   - name: {{ name }}-with-qds
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - qds-sdk >=1.10.4
     test:
@@ -744,10 +705,9 @@ outputs:
         - airflow.contrib.hooks.qubole_hook
 
   - name: {{ name }}-with-rabbitmq
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - amqp
     test:
@@ -756,10 +716,9 @@ outputs:
         - amqp
 
   - name: {{ name }}-with-redis
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - redis-py >=3.2.0,<3.3.0
     test:
@@ -769,10 +728,9 @@ outputs:
         - airflow.contrib.hooks.redis_hook
 
   - name: {{ name }}-with-salesforce
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - simple-salesforce >=0.72,<1.0.0
     test:
@@ -782,10 +740,9 @@ outputs:
         - airflow.contrib.hooks.salesforce_hook
 
   - name: {{ name }}-with-samba
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pysmbclient >=0.1.3
     test:
@@ -795,10 +752,9 @@ outputs:
         - airflow.hooks.samba_hook
 
   - name: {{ name }}-with-segment
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - analytics-python >=1.2.9
     test:
@@ -808,10 +764,9 @@ outputs:
         - airflow.contrib.hooks.segment_hook
 
   - name: {{ name }}-with-sendgrid
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - sendgrid >=5.2.0,<6
     test:
@@ -821,10 +776,9 @@ outputs:
         - airflow.contrib.utils.sendgrid
 
   - name: {{ name }}-with-sentry
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - blinker >=1.1
         - sentry-sdk >=0.8.0
@@ -835,10 +789,9 @@ outputs:
         - airflow.sentry
 
   - name: {{ name }}-with-slack
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - slackclient >=1.0.0,<2.0.0
     test:
@@ -848,10 +801,9 @@ outputs:
         - airflow.hooks.slack_hook
 
   - name: {{ name }}-with-snowflake
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - snowflake-connector-python >=1.5.2
         - snowflake-sqlalchemy >=1.1.0
@@ -862,10 +814,9 @@ outputs:
         - airflow.contrib.hooks.snowflake_hook
 
   - name: {{ name }}-with-ssh
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - paramiko >=2.1.1
         - pysftp >=0.2.9
@@ -878,10 +829,9 @@ outputs:
         - airflow.contrib.hooks.ssh_hook
 
   - name: {{ name }}-with-statsd
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - statsd >=3.3.0,<4.0
     test:
@@ -890,10 +840,9 @@ outputs:
         - statsd
 
   - name: {{ name }}-with-vertica
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - vertica-python >=0.5.1
     test:
@@ -903,10 +852,9 @@ outputs:
         - airflow.contrib.hooks.vertica_hook
 
   - name: {{ name }}-with-virtualenv
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - virtualenv
     test:
@@ -915,10 +863,9 @@ outputs:
         - virtualenv
 
   - name: {{ name }}-with-webhdfs
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - python-hdfs >=2.0.4
     test:
@@ -928,10 +875,9 @@ outputs:
         - airflow.hooks.webhdfs_hook
 
   - name: {{ name }}-with-winrm
-    build:
-      skip: true  # [py!=38]
     requirements:
       run:
+        - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pywinrm >=0.4.0,<0.5.0
     test:
