--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,20 +32,19 @@ outputs:
       run:
         - python
         - alembic >=1.0,<2.0
-        - argcomplete >=1.10.0,<1.11.0
-        - attrs >=19.3,<19.4
-        - cached-property >=1.5.0,<1.6.0
-        - cattrs >=1.0,<1.1.0
+        - argcomplete >=1.10,<2.0
+        - attrs >=20.0,<21.0
+        - cached-property >=1.5,<2.0
+        - cattrs >=1.0,<1.1.0  # [py<=36]
+        - cattrs >=1.0,<2.0  # [py>36]
         - colorlog 4.0.2
         - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
         - dill >=0.2.2,<0.4
         - email-validator
-        - enum34 >=1.1.6,<1.2.0  # [py<34]
         - flask >=1.1.0,<2.0
         - flask-admin 1.5.4
-        - flask-appbuilder >=1.12.2,<2.0.0  # [py<36]
-        - flask-appbuilder >=2.2,<2.3  # [py>=36]
+        - flask-appbuilder >=2.2,<3.0
         - flask-caching >=1.3.3,<1.4.0
         - flask-login >=0.3,<0.5
         - flask-swagger 0.2.13,<0.3
@@ -54,17 +53,18 @@ outputs:
         - future >=0.16.0,<0.19
         - python-graphviz >=0.12
         - gunicorn >=19.5.0,<21.0
+        - importlib-metadata >=2.0,<3.0  # [py<38]
         - iso8601 >=0.1.12
         - jinja2 >=2.10.1,<2.12.0
         - json-merge-patch 0.2
-        - jsonschema >=3.0.0,<3.1.0  # [py<38]
-        # Earlier versions were not build with py38, so this is newer than upstream spec
-        - jsonschema >=3.1.0,<3.2.0  # [py>=38]
-        - lazy-object-proxy >=1.3.0,<1.4.0
+        - jsonschema >=3.0,<4.0
+        - lazy-object-proxy >=1.3,<2.0
         - markdown >=2.5.2,<3.0
-        - marshmallow-sqlalchemy >=0.16.1,<0.19.0  # [py<36]
+        - marshmallow-sqlalchemy >=0.16.1,<0.24.0
+        - packaging
         - pandas >=0.17.1,<2.0.0
         - pendulum 1.4.4
+        - pep562 >=1.0,<2.0  # [py<37]
         - psutil >=4.2.0,<6.0.0
         - pygments >=2.0.1,<3.0
         - python-daemon >=2.1.1
@@ -73,9 +73,8 @@ outputs:
         - python-slugify >=3.0.0,<5.0
         - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
-        - sqlalchemy >=1.3.0,<1.4.0
-        - sqlalchemy-jsonfield 0.8.0  # [py<35]
-        - sqlalchemy-jsonfield >=0.9.0,<0.10.0  # [py>=35]
+        - sqlalchemy >=1.3,<2.0
+        - sqlalchemy-jsonfield >=0.9,<1.0
         - tabulate >=0.7.5,<0.9
         - tenacity 4.12.0
         - thrift >=0.9.2
