--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "airflow" %}
-{% set version = "1.10.13" %}
-{% set sha256 = "fecde45943b7a99dba30acd902f1311bc238bb8d975c98102a453c6f795ba48c" %}
+{% set version = "1.10.14" %}
+{% set sha256 = "f5e5a872788248b178b5dfc822bde7ced5e65b3b3436483a4e352d746cacc28b" %}
 
 package:
   name: {{ name|lower }}-split
@@ -40,6 +40,7 @@ outputs:
         - colorlog 4.0.2
         - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
+        - cryptography>=0.9.3
         - dill >=0.2.2,<0.4
         - email-validator
         - flask >=1.1.0,<2.0
@@ -54,11 +55,12 @@ outputs:
         - python-graphviz >=0.12
         - gunicorn >=19.5.0,<21.0
         - importlib-metadata >=2.0,<3.0  # [py<38]
+        - importlib_resources >=1.4,<2.0
         - iso8601 >=0.1.12
         - jinja2 >=2.10.1,<2.12.0
         - json-merge-patch 0.2
         - jsonschema >=3.0,<4.0
-        - lazy-object-proxy >=1.3,<2.0
+        - lazy_object_proxy <1.5.0
         - markdown >=2.5.2,<3.0
         - marshmallow-sqlalchemy >=0.16.1,<0.24.0
         - packaging
@@ -72,13 +74,13 @@ outputs:
         - python-dateutil >=2.3,<3
         - python-nvd3 >=0.15.0,<0.16.0
         - python-slugify >=3.0.0,<5.0
-        - requests >=2.20.0,<3
+        - requests >=2.20.0,<2.24.0
         - setproctitle >=1.1.8,<2
         - sqlalchemy >=1.3,<2.0
         - sqlalchemy-jsonfield >=0.9,<1.0
         - tabulate >=0.7.5,<0.9
         - tenacity 4.12.0
-        - thrift >=0.9.2
+        - thrift >=0.11.0
         - typing  # [py<35]
         # contrary to upstream spec, this seems to be needed for py=38 as well
         - typing_extensions >=3.7.4
@@ -173,7 +175,7 @@ outputs:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         # leaving this as is because it was just added, but noting that upstream
-        # constraint is boto3~=1.10 and no watchtower
+        # constraint is boto3~=1.10<1.11 and no watchtower
         - boto3 >=1.12.0,<2.0.0
         - watchtower 0.7.3
     test:
@@ -191,7 +193,8 @@ outputs:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - azure-storage >=0.34.0,<0.37.0
-        - azure-storage-blob <12.0
+        - azure-storage-common
+
     test:
       imports:
         - airflow
@@ -570,24 +573,21 @@ outputs:
         - jira
         - airflow.contrib.hooks.jira_hook
 
-  # this is unlikely to be useful since snakebite only supports py<=27
-  # and hasn't been updated in 4 years
-  #- name: {{ name }}-with-kerberos
-  #  requirements:
-  #    host:
-  #      - python
-  #    run:
-  #      - python
-  #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-  #      - pykerberos >=1.1.13
-  #      - requests-kerberos >=0.10.0
-  #      - snakebite[kerberos] >=2.7.8
-  #      - thrift_sasl >=0.2.0
-  #  test:
-  #    imports:
-  #      - airflow
-  #      - kerberos
-  #      - airflow.api.auth.backend.kerberos_auth
+  - name: {{ name }}-with-kerberos
+    requirements:
+      host:
+        - python
+      run:
+        - python
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - pykerberos >=1.1.13
+        - requests-kerberos >=0.10.0
+        - thrift_sasl >=0.2.0
+    test:
+      imports:
+        - airflow
+        - kerberos
+        - airflow.api.auth.backend.kerberos_auth
 
   - name: {{ name }}-with-kubernetes
     requirements:
@@ -702,7 +702,7 @@ outputs:
         - papermill[all] >=1.0.0
         - nteract-scrapbook[all] >=0.2.1
         - pyarrow <1.0.0
-        - fsspec <0.8.0  # [py35]
+        - black 20.8b0
     test:
       imports:
         - airflow
@@ -789,7 +789,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - amqp
+        - amqp <5.0.0
     test:
       imports:
         - airflow
@@ -888,6 +888,7 @@ outputs:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - slackclient >=1.0.0,<2.0.0
+        - websocket-client <0.55.0
     test:
       imports:
         - airflow
@@ -901,6 +902,8 @@ outputs:
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        # see https://github.com/apache/airflow/pull/13286/files
+        - boto3 <1.11.0
         - snowflake-connector-python >=1.5.2
         - snowflake-sqlalchemy >=1.1.0
     test:
