--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,24 +40,25 @@ outputs:
         - cached-property >=1.5,<2.0
         - cattrs >=1.0,<1.1.0  # [py<=36]
         - cattrs >=1.0,<2.0  # [py>36]
+        - clickclick >=1.2
         - colorlog >=4.0.2
-        - connexion >=2.6.0,<3
-        # swagger-ui-bundle required by connexion extra
-        - swagger-ui-bundle >=0.0.2
-        - croniter >=0.3.17,<0.4
+        - croniter >=0.3.17,<1.1
         - cryptography >=0.9.3
+        - dataclasses  # [py<37]
         - dill >=0.2.2,<0.4
         - flask >=1.1.0,<2.0
-        - flask-appbuilder >=3.1.1,<3.2.0
+        - flask-appbuilder >=3.3,<4.0
         - flask-caching >=1.5.0,<2.0.0
         - flask-login >=0.3,<0.5
         - flask-wtf >=0.14.3,<0.15
         - python-graphviz >=0.12
-        - gunicorn >=19.5.0,<20.0
+        - gunicorn >=19.5.0
+        - httpx
         - importlib_metadata >=1.7,<2.0  # [py<39]
         - importlib_resources >=1.4,<2.0
+        - inflection >=0.3.1
         - iso8601 >=0.1.12
-        - itsdangerous >=1.1.0
+        - itsdangerous>=1.1.0,<2.0
         - jinja2 >=2.10.1,<2.12.0
         - jsonschema >=3.0,<4.0
         - lazy-object-proxy
@@ -65,7 +66,10 @@ outputs:
         - markdown >=2.5.2,<4.0
         - markupsafe >=1.1.1,<2.0
         - marshmallow-oneofschema >=2.0.1
-        - numpy
+        # From upstream: Numpy stopped releasing 3.6 binaries for 1.20.* series.
+        - numpy <1.20  # [py<37]
+        - numpy  # [py>=37]
+        - openapi-spec-validator >=0.2.4
         # From upstream: Pandas stopped releasing 3.6 binaries for 1.2.* series.
         - pandas >=0.17.1,<2.0  # [py>=37]
         - pandas >=0.17.1,<1.2  # [py<37]
@@ -79,12 +83,13 @@ outputs:
         - python-nvd3 >=0.15.0,<0.16.0
         - python-slugify >=3.0.0,<5.0
         - python3-openid >=3.2,<4.0
-        - requests >=2.20.0
-        - rich 9.2.0
+        - pyyaml >=5.1
+        - rich >=9.2.0
         - setproctitle >=1.1.8,<2
         # From upstream: SQLAlchemy 1.4 breaks sqlalchemy-utils https://github.com/kvesteri/sqlalchemy-utils/issues/505
         - sqlalchemy >=1.3.18,<1.4
         - sqlalchemy-jsonfield >=1.0,<2.0
+        - swagger-ui-bundle >=0.0.2
         - tabulate >=0.7.5,<0.9
         - tenacity >=6.2.0,<6.3.0
         - termcolor >=1.1.0
@@ -92,7 +97,8 @@ outputs:
         - unicodecsv >=0.14.1
         - werkzeug >=1.0.1,<2.0
         - apache-airflow-providers-ftp
-        - apache-airflow-providers-http
+        # From upstream, it seems there is a licensing issue with including this provider by default
+        #- apache-airflow-providers-http
         - apache-airflow-providers-imap
         - apache-airflow-providers-sqlite
 
@@ -191,7 +197,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - apache-beam
+        - apache-beam >=2.20.0
     test:
       imports:
         - airflow
@@ -268,7 +274,7 @@ outputs:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - cloudpickle >=1.4.1,<1.5.0
         # dask stopped supporting python 3.6 in 2021.3.1 version
-        - dask >=2.9.0,<2021.3.1   # [py<37] 
+        - dask <2021.3.1   # [py<37] 
         - dask >=2.9.0  # [py>=37]
         - distributed >=2.11.1,<2.20
     test:
