--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -308,7 +308,7 @@ outputs:
     test:
       imports:
         - airflow
-        - flask_oauthlib
+        - authlib
       commands:
         - pip check
       requires:
@@ -325,7 +325,7 @@ outputs:
     test:
       imports:
         - airflow
-        - flask_oauthlib
+        - authlib
       commands:
         - pip check
       requires:
