--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "airflow" %}
-{% set version = "2.1.3" %}
-{% set sha256 = "2ce013ae358757bcf42f0b807c2c9086b848f6d7e8e65d409b10b8a77e98770c" %}
+{% set version = "2.1.4" %}
+{% set sha256 = "cced921ad42dc7fcc6c7dead56987264621c71fcf39e30c8f4f4f355e9915268" %}
 
 package:
   name: {{ name|lower }}-split
@@ -43,7 +43,7 @@ outputs:
         - cattrs >=1.0,<1.1.0  # [py<=36]
         - cattrs >=1.1,<1.7.0  # [py>36]
         - clickclick >=1.2
-        - colorlog >=4.0.2
+        - colorlog >=4.0.2,<6.0
         - croniter >=0.3.17,<1.1
         - cryptography >=0.9.3
         - dataclasses  # [py<37]
@@ -240,6 +240,7 @@ outputs:
       run:
         - python
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - dnspython <2.0.0
         - eventlet >=0.9.7
         - gevent >=0.13
         - greenlet >=0.4.9
