--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -95,6 +95,9 @@ outputs:
         - apache-airflow-providers-http
         - apache-airflow-providers-imap
         - apache-airflow-providers-sqlite
+        # seems to be having trouble with openssl 3.
+        # By including it as a dependency, we can explicitly check
+        - openssl
 
     test:
       commands:
