--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "airflow" %}
-{% set version = "2.2.0" %}
-{% set sha256 = "f53d7fafec8ffe7ce87b39be7842adca67b1215f841a2390dd2e5d17b4a0161d" %}
+{% set version = "2.2.1" %}
+{% set sha256 = "8cbd8a056ea299f11e235dda9604a88a1cd3afcc1b156c662a66a0fa8ad73f41" %}
 
 package:
   name: {{ name|lower }}-split
@@ -71,7 +71,7 @@ outputs:
         - markupsafe >=1.1.1,<2.0
         - marshmallow-oneofschema >=2.0.1
         - openapi-spec-validator >=0.2.4
-        - packaging >=21.0,<22.0
+        - packaging >=14.0
         - pendulum >=2.0,<3.0
         - pep562 >=1.0,<2.0  # [py<37]
         - psutil >=4.2.0,<6.0.0
